--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="utf-8">
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/locale/af.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
+    
+
+
+
     <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
       <div class="container">
           <h3>Scegli una nazione dalla lista</h3>
-          <select class="" name="">
-              <option>-</option>
-              <option>IT</option>
-              <option>ENG</option>
-              <option>DE</option>
-              <option>FR</option>
-              <option>SE</option>
+          <select id="country" class="" name="">
+              <option class="option" value="IT">IT</option>
+              <option class="option" value="ENG">ENG</option>
+              <option class="option" value="DE">DE</option>
+              <option class="option" value="FR">FR</option>
+              <option class="option" value="SE">SE</option>
           </select>
-          
+
           <h3>Scegli l'anno desiderato</h3>
           <select id="year" class="" name=""></select>
           <h3>Scegli il mese desiderato</h3>
           <select id="month" class="" name=""></select><br>
           <button id="btn" type="button" name="button">Invia</button>
-
 
 
 
